--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ Thanks for visiting my site - http://ngoc.name.vn/
 <!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Tôi là Nguyễn Văn Ngọc</h1>
-					<p>Chào mừng bạn đến với website của tôi</p>
+					<h1>Hi :> I`m Phạm Quang Vũ(Vumilo) </h1>
+					<p>welcome to my private website </p>
 				</header>
 				<footer>
 					<a href="#thong-tin" class="button scrolly"><i class="fa fa-info-circle"></i> Thông tin cá nhân</a>
