--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ Thanks for visiting my site - http://ngoc.name.vn/
 -->
 <html lang="vi-VN">
 	<head>
-		<title>Tôi là Nguyễn Văn Ngọc CNTT K35 đại học Quy Nhơn</title>
+		<title>Vumilo nek :> </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Tôi là Nguyễn Văn Ngọc, hiện là sinh viên tại lớp CNTT K35 đại học Quy Nhơn, là admin tại kyniem.org và có niềm đam mê lớn với công nghệ" />
-		<meta name="keywords" content="Nguyễn Văn Ngọc, Ngọc CNTT K35, nguyen van ngoc cntt k35, đại học quy nhơn, diễn đàn kỷ niệm" />
+		<meta name="description" content="Tôi là Phạm Quang Vũ, hiện là hs trường THCS TRung VUong" />
+		<meta name="keywords" content="Phạm QUang Vũ, THCS Trung Vuong, Pham Quang Vu Thcs Trung VUong, Thcs Trung Vuong, diễn đàn kỷ niệm" />
 		<link href="http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic&amp;subset=latin,cyrillic-ext,latin-ext,cyrillic,greek-ext,vietnamese,greek" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
@@ -62,8 +62,8 @@ Thanks for visiting my site - http://ngoc.name.vn/
 			<section id="thong-tin" class="main">
 				<header>
 					<div class="container">
-						<h2>Vài dòng thông tin về tôi</h2>
-						<p>Tôi tên là Nguyễn Văn Ngọc, là một 9x với nhiều ước mơ và khát vọng từ thuở bé, nhưng tiếc thay hầu hết những ước mơ đó đến nay vẫn chưa trở thành hiện thực. Tôi hiện đang là sinh viên ngành Công nghệ thông tin tại trường đại học Quy Nhơn.</p>
+						<h2>A little bit infomation about me :> </h2>
+						<p>HI,iam Vu , I`m was born in 2007,I have a lot of dreams about luxury and go around the world, but I’m soteries of the dreams that is not yet to be done.</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
