--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 				<header>
 					<div class="container">
 						<h2>A little bit infomation about me :> </h2>
-						<p>HI,iam Vu , I`m was born in 2007,I have a lot of dreams about luxury and go around the world, but I’m soteries of the dreams that is not yet to be done.</p>
+						<p>HI,iam Vu , I was born in 2007,I have a lot of dreams about luxury and go around the world, but I’m soteries of the dreams that is not yet to be done.</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -73,20 +73,20 @@ Thanks for visiting my site - http://ngoc.name.vn/
 								<section>
 									<span class="feature-icon"><span class="fa fa-clock-o"></span></span>
 									<header>
-										<h3>Mốc thời gian</h3>
+										<h3>TImeline</h3>
 									</header>
-									<p>Tôi sinh ngày 05/08/1994 tại quê nghèo Quảng Nam. Sinh ra và lớn lên ở đây, giờ đi xa mới thấy nhớ quê hương lạ.<br />
-                                    Năm 2012, tôi tốt nghiệp THPT tại trường THPT Nguyễn Văn Cừ và cũng bắt đầu cuộc sống xa nhà để theo đuổi ước mơ đại học từ đây. <i class="fa fa-home"></i></p>
+									<p>I was born at  12/05/2007 at a poor village in Ha Noi,Vietnam. <br />
+                                    At 2016,this is one of my best year.In that year,I graduated from primary school,my dad bought a new car,i had a new house too . <i class="fa fa-home"></i></p>
 								</section>
 							</div>
 							<div class="4u">
 								<section>
 									<span class="feature-icon"><span class="fa fa-bolt"></span></span>
 									<header>
-										<h3>Tính cách</h3>
+										<h3>About my character :></h3>
 									</header>
-									<p>Tôi là người trầm tính, ít nói, sống nội tâm, yêu màu hồng (à mà thực ra là màu xanh, ghi cho nó vần tý), đặc biệt ghét sự dối trá vì đã từng bị lừa dối. <br />
-                                    Người ta mới gặp tôi sẽ nghĩ tôi là một người ít nói, quen rồi mới biết đã ít nói lại còn rất chán nữa chứ. <i class="fa fa-meh-o"></i></p>
+									<p>I am a quiet person,i dont talk much.I love the green colour(sometimes is pink,idk :v) <br />
+                                    When I was a toddler in 6th grade, when I first met new people, I didn't talk much,But over time, I will get used to it, I become funny. <i class="fa fa-meh-o"></i></p>
 								</section>
 							</div>
 							<div class="4u">
