--- a/index.html
+++ b/index.html
@@ -93,17 +93,17 @@ Thanks for visiting my site - http://ngoc.name.vn/
 								<section>
 									<span class="feature-icon"><span class="fa fa-star"></span></span>
 									<header>
-										<h3>Sở thích, đam mê</h3>
+										<h3>Hobbies :)</h3>
 									</header>
-									<p>Sở thích thì nhiều vô cùng nhưng có lẽ câu cá là thú vui lớn nhất của tôi thuở thiếu thời. Bây giờ vẫn vậy nhưng không có thời gian nữa.<br />
-                                    Có niềm đam mê lớn với công nghệ, thích mày mò vọc vạch và wap/web là một phần của niềm đam mê ấy. <i class="fa fa-laptop"></i></p>
+									<p>My hobbies is playing game,read comic book,.... .<br />
+                                    I have a big passion of technology.In the future i want to be a coder cause it helps me to earn a lot of money. <i class="fa fa-laptop"></i></p>
 								</section>
 							</div>
 						</div>
 						<div class="row">
 							<div class="12u">
 								<footer>
-									<a href="#dam-me" class="button scrolly"><i class="fa fa-globe"></i> Niềm đam mê wap/web</a>
+									<a href="#dam-me" class="button scrolly"><i class="fa fa-globe"></i> My good habits :></a>
 								</footer>
 							</div>
 						</div>
@@ -111,11 +111,11 @@ Thanks for visiting my site - http://ngoc.name.vn/
 				</div>
 			</section>
 
-		<!-- Đam mêm wap/web -->
-			<section id="dam-me" class="main">
+		<!-- My good habits -->
+			<section id="good-habits" class="main">
 				<header>
 					<div class="container">
-						<h2>Niềm đam mê lớn với lập trình web và quản lý website</h2>
+						<h2>My habits start with the simplest things</h2>
 						<p>Tôi có thói quen tham gia các diễn đàn công nghệ để tìm hiểu thông tin, không biết tự bao giờ tôi có ý định tự tạo cho mình một website giống như vậy. Tôi bắt đầu tìm hiểu về lập trình web và cũng đã có cho mình những sản phẩm đầu tay.</p>
 					</div>
 				</header>
