--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 <!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Hi :> I`m Phạm Quang Vũ(Vumilo) </h1>
+					<h1>Hi :> I`m Phạm Quang Vũ(Vumilo :)) ) </h1>
 					<p>welcome to my private website </p>
 				</header>
 				<footer>
