--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 						<div class="row">
 							<div class="12u">
 								<footer>
-									<a href="#dam-me" class="button scrolly"><i class="fa fa-globe"></i> My good habits :></a>
+									<a href="#dam-me" class="button scrolly"><i class="fa fa-globe"></i> social media : </a>
 								</footer>
 							</div>
 						</div>
@@ -111,12 +111,12 @@ Thanks for visiting my site - http://ngoc.name.vn/
 				</div>
 			</section>
 
-		<!-- My good habits -->
+		<!-- social media -->
 			<section id="good-habits" class="main">
 				<header>
 					<div class="container">
-						<h2>My habits start with the simplest things</h2>
-						<p>Tôi có thói quen tham gia các diễn đàn công nghệ để tìm hiểu thông tin, không biết tự bao giờ tôi có ý định tự tạo cho mình một website giống như vậy. Tôi bắt đầu tìm hiểu về lập trình web và cũng đã có cho mình những sản phẩm đầu tay.</p>
+						<h2>Facebook: https://www.facebook.com/milo.tao.90 </h2>
+						<p>______________________________________________________________.</p>
 					</div>
 				</header>
 				<div class="content dark style2">
