--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 						<div class="row">
 							<div class="12u">
 								<footer>
-									<a href="#dam-me" class="button scrolly"><i class="fa fa-globe"></i> social media : </a>
+									<a href="#social-media" class="button scrolly"><i class="fa fa-globe"></i> social media : </a>
 								</footer>
 							</div>
 						</div>
@@ -112,7 +112,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 			</section>
 
 		<!-- social media -->
-			<section id="good-habits" class="main">
+			<section id="social-media" class="main">
 				<header>
 					<div class="container">
 						<h2>Facebook: https://www.facebook.com/milo.tao.90 </h2>
