--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 							</div>
 							<div class="8u">
 								<div class="row no-collapse">
-									<div class="6u"><a href="http://kyniem.org" title="Diễn đàn Kỷ Niệm" target="_blank" class="image full"><img src="images/pic01.jpg" alt="Diễn đàn Kỷ Niệm" /></a></div>
+									<div class="6u"><a href="http://kyniem.org" title="Diễn đàn Kỷ Niệm" target="_blank" class="image full"><img src="https://cdn.discordapp.com/attachments/690794454130360331/877122610809434152/221s.PNG" alt="Diễn đàn Kỷ Niệm" /></a></div>
 									<div class="6u"><a href="http://kyniem.org/upanh/" title="Up ảnh Kỷ Niệm" target="_blank" class="image full"><img src="images/pic02.jpg" alt="Úp ảnh Kỷ Niệm" /></a></div>
 								</div>
 								<div class="row no-collapse">
