--- a/index.html
+++ b/index.html
@@ -124,16 +124,12 @@ Thanks for visiting my site - http://ngoc.name.vn/
 						<div class="row">
 							<div class="4u">
 								<section>
-									<h3>Một số website đầu tay</h3>
+									<h3>Link to my social media :)</h3>
 									<p>Click vào ảnh để truy cập trang web <i class="fa fa-arrow-circle-right"></i></p>
-									<p>Tôi bắt đầu lên mạng để tìm hiểu về thiết kế và lập trình web, và cũng đã tự mày mò tự tạo cho mình những website đầu tiên sử dụng tên miền và hosting miễn phí. Lúc đấy cảm thấy vui sướng vô cùng.</p>
-									<p>Sau đó là những website khác ra đời với sự đầu tư nhiều hơn về domain & hosting. Website tâm đắc nhất của tôi ở thời điểm hiện tại là <a href="http://kyniem.org" title="Diễn đàn Kỷ Niệm" target="_blank">Diễn đàn Kỷ Niệm</a> - Đúng như cái tên, ban đầu tôi đăng ký tên miền kyniem.org chỉ để làm website kỷ niệm cho một chuyến đi nhưng sau đó lại phát triễn nó theo một hướng hoàn toàn khác.</p>
-                                    <p>Một trong những ứng dụng nhận được nhiều sự ủng hộ nhất từ người dùng là trang <a href="http://kyniem.org/coca" title="In khắc tên lên lon coca" target="_blank">In tên Coca</a> với lượng truy cập và sử dụng khá lớn.
-                                    </p>
-                                    <p>Bắt đầu kiếm được tiền từ những website của mình, tuy không nhiều nhưng cũng đủ để tiếp tục duy trì đam mê.
+									
                                     </p>
 									<footer>
-										<a href="#ky-niem" class="button scrolly">Về diễn đàn Kỷ Niệm <i class="fa fa-level-down"></i></a>
+										<a href="#ky-niem" class="button scrolly">idk too <i class="fa fa-level-down"></i></a>
 									</footer>
 								</section>
 							</div>
