--- a/index.html
+++ b/index.html
@@ -165,17 +165,17 @@ Thanks for visiting my site - http://ngoc.name.vn/
 					<div class="container">
 						<div class="row">
 							<div class="4u">
-								<h3><i class="fa fa-info-circle"></i> Về Diễn đàn Kỷ Niệm</h3>
-								<p><i class="fa fa-quote-left"></i> Diễn Đàn Kỷ Niệm share code web xenforo và style xenforo <i class="fa fa-quote-right"></i></p>
-                                <p>Kyniem.org ra đời với nguyên tắc là website phi lợi nhuận, phi tôn giáo, phi chính trị, hoạt động chủ yếu vì sự đam mê và ước muốn giao lưu học hỏi kiến thức.</p>
+								<h3><i class="fa fa-info-circle"></i> </h3>
+								<p><i class="fa fa-quote-left"></i>  <i class="fa fa-quote-right"></i></p>
+                                <p>.</p>
 							</div>
 							<div class="4u">
-								<p>Website sử dụng mã nguồn Xenforo và cũng chuyên chia sẻ, bàn luận các vấn đề liên quan đến Xenforo như addon xenforo, style xenforo và các thủ thuật trong quá trình sử dụng, quản lý website xenforo.</p>
-                                <p>Ngoài ra kyniem.org còn là nơi thảo luận về các vấn đề khác như điện thoại, game, phần mềm và một số mã nguồn khác.</p>
+								<p>.</p>
+                                <p>.</p>
 							</div>
 							<div class="4u">
-								<p>Có lẽ là không liên quan nhưng thực sự lại rất liên quan đó là đây còn là nơi để mọi người dốc bầu tâm sự, chia sẻ những kỷ niệm khó quên của mình.</p>
-                                <p>Rất vui nhận được phản hồi từ các bạn!</p>
+								<p>.</p>
+                                <p>!</p>
 								<footer>
 									<a href="lien-he.php" class="button scrolly"><i class="fa fa-phone"></i> Liên hệ với tôi</a>
 								</footer>
