--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
-						<li>&copy; 2015 Nguyễn Văn Ngọc. Version 2.0 (beta)</li>
+						<li>&copy; Phạm Quang Vũ.2021</li>
 						<li>Thanks for visiting my site</li>
 					</ul>
 				</div>
