--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 	<head>
 		<title>Vumilo nek :> </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Tôi là Phạm Quang Vũ, hiện là hs trường THCS TRung VUong" />
+		<meta name="description" content="no,dont,pls dont click this link" />
 		<meta name="keywords" content="Phạm QUang Vũ, THCS Trung Vuong, Pham Quang Vu Thcs Trung VUong, Thcs Trung Vuong, diễn đàn kỷ niệm" />
 		<link href="http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400,400italic&amp;subset=latin,cyrillic-ext,latin-ext,cyrillic,greek-ext,vietnamese,greek" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
