--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Thanks for visiting my site - http://ngoc.name.vn/
 			<section id="header" class="dark">
 				<header>
 					<h1>Hi :> I`m Phạm Quang Vũ(Vumilo :)) ) </h1>
-					<p>welcome to my private website </p>
+					<p>welcome to my <i>private</i> website </p>
 				</header>
 				<footer>
 					<a href="#thong-tin" class="button scrolly"><i class="fa fa-info-circle"></i> in4mation</a>
