--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ Thanks for visiting my site - http://ngoc.name.vn/
 			<section id="thong-tin" class="main">
 				<header>
 					<div class="container">
-						<h2>A little bit infomation about me :> </h2>
-						<p>HI,iam Vu , I was born in 2007,I have a lot of dreams about luxury and go around the world, but I’m soteries of the dreams that is not yet to be done.</p>
+						<h2> n/a </h2>
+						<p> n/a </p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -74,8 +74,8 @@ Thanks for visiting my site - http://ngoc.name.vn/
 									<header>
 										<h3>TImeline</h3>
 									</header>
-									<p>I was born at  12/05/2007 at a poor village in Ha Noi,Vietnam. <br />
-                                    At 2016,this is one of my best year.In that year,I graduated from primary school,my dad bought a new car,i had a new house too . <i class="fa fa-home"></i></p>
+									<p> n/a <br />
+                                   						n/a <i class="fa fa-home"></i></p>
 								</section>
 							</div>
 							<div class="4u">
@@ -84,8 +84,8 @@ Thanks for visiting my site - http://ngoc.name.vn/
 									<header>
 										<h3>About my character :></h3>
 									</header>
-									<p>I am a quiet person,i dont talk much.I love the green colour(sometimes is pink,idk :v) <br />
-                                    When I was a toddler in 6th grade, when I first met new people, I didn't talk much,But over time, I will get used to it, I become funny. <i class="fa fa-meh-o"></i></p>
+									<p> n/a  <br />
+                                    						n/a <i class="fa fa-meh-o"></i></p>
 								</section>
 							</div>
 							<div class="4u">
@@ -94,8 +94,8 @@ Thanks for visiting my site - http://ngoc.name.vn/
 									<header>
 										<h3>Hobbies :)</h3>
 									</header>
-									<p>My hobbies is playing game,read comic book,.... .<br />
-                                    I have a big passion of technology.In the future i want to be a coder cause it helps me to earn a lot of money. <i class="fa fa-laptop"></i></p>
+									<p> n/a <br />
+                                   				n/a <i class="fa fa-laptop"></i></p>
 								</section>
 							</div>
 						</div>
