--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ Thanks for visiting my site - http://ngoc.name.vn/
 			<section id="thong-tin" class="main">
 				<header>
 					<div class="container">
-						<h2> n/a </h2>
-						<p> n/a </p>
+						<h2> nothing here :D </h2>
+						<p> quiet person right? :D </p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
