--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='vi-VN'>
 <head>
-	<title> Vu </title>
+	<title> Yêu đbc </title>
 	<meta charset="utf-8">
 	<meta name="description" content="Vu"/>
 	<meta name="keywords" content="Vu"/>
